--- a/report/tex_files/introduction.tex
+++ b/report/tex_files/introduction.tex
@@ -1,1 +1,6 @@
 \section{Introducción}
+La familia de los coronavirus son virus infecciosos a los que se llama así debido a que en su superficie tienen puntas en forma de corona. A esta familia se les unió en 2019 el conocido SARS-CoV-2, que ha dado lugar al coronavirus 2 o COVID-19. Esta enfermedad es una enfermedad infecciosa que afecta a las vías respiratorias, de manera leve a moderada. Sin embargo esta enfermedad en personas mayores o con patologías previas puede hacer que se desarrolle la enfermedad con consecuencias o síntomas más graves, pudiendo producir hasta la muerte.
+
+El coronavirus actualmente es considerado un problema de salud global, ya que debido a esta pandemia se han contagiado hasta ahora unas 369.955.862 personas y han fallecido 5.650.738. 
+
+Es por esto que es esencial el estudio de este virus, tanto de sus genes, sus proteinas o como interacciona con el ser humano. 
