Carga de librerías y datos---LaTex

--- a/report/tex_files/material_methods.tex
+++ b/report/tex_files/material_methods.tex
@@ -10,6 +10,13 @@ Las librerías que han sido utilizadas en este proyecto son las siguientes:
 	\item zoo: Esta librería está especialmente dirigida a series temporales irregulares de vectores/matrices y factores numéricos. 
 	\item STRINGdb: Este paquete proporciona una interfaz para la base de datos STRING de interacciones proteína-proteína.
 \end{itemsize}
+
+Después de tener las librerías necesarias y saber la funcionalidad de cada una de ellas, se procederá a cargar el archivo en una variable llamada "data" mediante el método "read.csv()"
+
+Seguidamente, se filtrarán las entradas utilizando el paquete "dplyr" en las que la columna Entry.Name contenga en su nombre "HUMAN" ya que estos son los datos que interesan en esta práctica.
+
+
+
 	
 
 
