--- a/report/tex_files/introduction.tex
+++ b/report/tex_files/introduction.tex
@@ -1,6 +1,14 @@
 \section{Introducción}
 La familia de los coronavirus son virus infecciosos a los que se llama así debido a que en su superficie tienen puntas en forma de corona. A esta familia se les unió en 2019 el conocido SARS-CoV-2, que ha dado lugar al coronavirus 2 o COVID-19. Esta enfermedad es una enfermedad infecciosa que afecta a las vías respiratorias, de manera leve a moderada. Sin embargo esta enfermedad en personas mayores o con patologías previas puede hacer que se desarrolle la enfermedad con consecuencias o síntomas más graves, pudiendo producir hasta la muerte.
 
-El coronavirus actualmente es considerado un problema de salud global, ya que debido a esta pandemia se han contagiado hasta ahora unas 369.955.862 personas y han fallecido 5.650.738. 
+El coronavirus actualmente es considerado un problema de salud global, ya que debido a esta pandemia se han contagiado hasta ahora unas 369.955.862 personas y han fallecido un total de 5.650.738 personas. 
 
-Es por esto que es esencial el estudio de este virus, tanto de sus genes, sus proteinas o como interacciona con el ser humano. 
+Es por esto que es esencial el estudio de este virus, tanto de sus genes, sus proteínas o como interacciona con el ser humano. 
+
+A día de hoy tras toda la inversión mundial que se ha hecho para poder poner fin a este virus, se sabe que el SARS-CoV-2 está formado por 29 proteínas que interactúan con las células del ser humano pudiendo producir síntomas respiratorios graves hasta poder causar la muerte. A estas interacciones moleculares binarias proteína-proteína se les llama interactoma. 
+
+El interactoma sirve como de punto de partida para estudiar los posibles fármacos que podrían bloquear dichas interacciones y así evitar que el virus entre a la célula y se replique. Gracias al estudio del interactoma ha sido posible la realización de vacunas contra el COVID-19. 
+
+En este proyecto vamos a crear y estudiar la red de interacciones de las proteínas del SARS-CoV-2 con las proteínas humanas, y así poder obtener cuales son las principales funciones biológicas humanas en las que este virus interviene y relacionarlo con la realidad. Todos los recursos usados para la obtención de dicha información la podremos encontrar en el GitHub proporcionado. 
+
+
