Enriquecimiento Funcional --- Latex

--- a/report/tex_files/material_methods.tex
+++ b/report/tex_files/material_methods.tex
@@ -28,8 +28,10 @@ Seguidamente, utilizando el paquete linkcommm, se ha realizado la búsqueda de c
 
 Al obtener las comunidades vinculadas, estas serán guardadas en la carpeta de results y, además, se han obtenido los tamaños de los clusters y han sido clasificados por comunidad/modularidad para así obtener los 6 mejores.
 
+\subsection{Enriquecimiento Funcional}
+Al realizar el clustering y el agrupamiento de estas comunidades, se realizará el enriquecimiento funcional. Este enriquecimiento es utilizado para obtener los procesos biológicos de los grupos que han sido formados en el clustering.
+En primer lugar, ha sido diseñado el enriquecimiento mediante STRINGdb. Después, se ha realizado el enriquecimiento con GO, es decir, con una ontología génica y también, se ha realizado el enriquecimiento con la ontología KEGG. 
 
+El enriquecimiento ha sido utilizado con los clusters de mayor tamaño y de mayor modularidad.
 
-
-
-
+\subsection{Robustez}
