--- a/report/tex_files/material_methods.tex
+++ b/report/tex_files/material_methods.tex
@@ -35,5 +35,6 @@ En primer lugar, ha sido diseñado el enriquecimiento mediante STRINGdb. Despué
 El enriquecimiento ha sido utilizado con los clusters de mayor tamaño y de mayor modularidad.
 
 \subsection{Robustez}
-Por último, se ha calculado la robustez de la red de genes. La robustez funciona para conocer si la red que se está estudiando es un sistema fuerte y esta no tiende a tener errores.
-Para realizar este apartado, se ha utilizado los métodos proporcionados en el campus virtual. La robustez ha sido calculada frente a ataques aleatorios como a ataques dirigidos, pero también, han sido combinados ambos ataques.
+Por último, utilizando los métodos proporcionados en el campus virtual, se ha calculado la robustez de la red de genes. Esta funciona para conocer si la red que se está estudiando es un sistema fuerte y esta no tiende a tener errores. Además, ha sido calculada frente a ataques aleatorios como a ataques dirigidos, pero también, han sido combinados ambos ataques.
+
+ 
