Corrección imágenes Latex

--- a/report/report.tex
+++ b/report/report.tex
@@ -56,14 +56,14 @@
 			addressref={aff1},
 			corref={aff1},
 			email={delcastillosoledad@uma.es}
-			]{\inits{S.dC.C}\fnm{Soledad.} \snm{del Castillo Carrera}}
+			]{\inits{S.dC.C}\fnm{Soledad} \snm{del Castillo Carrera}}
 			
 			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			%% AFILIACION. NO TOCAR                     %%
 			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			
 			\address[id=aff1]{%                           % unique id
-			  \orgdiv{ETSI Informática},             % department, if any
+			  \ordiv{ETSI Informática},             % department, if any
 			  \orgname{Universidad de Málaga},          % university, etc
 			  \city{Málaga},                              % city
 			  \cny{España}                                    % country
