--- a/report/tex_files/material_methods.tex
+++ b/report/tex_files/material_methods.tex
@@ -20,11 +20,10 @@ A continuación, utilizando la librería STRINGdb, se realiza un mapeo con los d
 
 Seguidamente, se creará la primera capa de la red y se guardará el resultado de esta primera capa en una imagen png. 
 
-\subsection{Clustering y Linked Communities}
-Una vez se tiene los datos ya mapeados y filtrados, se pasa a realizar el clustering. El clustering consiste en agrupar los ítemns en grupos con características similares y así, determinar patrones.
-Utilizando el paquete STRINGdb, los datos mapeados han sido clasificados en cuatro grupos diferentes según sus características.
+\subsection{Linked Communities}
+Una vez se tiene los datos ya mapeados y filtrados, se pasa a realizar el clustering. El clustering consiste en agrupar los elementos o nodos en grupos con características similares y así, determinar patrones.
 
-Seguidamente, utilizando el paquete linkcommm, se ha realizado la búsqueda de comunidades. Linkcomm proporciona las herramientas necesarias para generar, visualizar y analizar comunidades dentro de un grafo.
+Utilizando el paquete linkcommm, se ha realizado la búsqueda de comunidades. Linkcomm proporciona las herramientas necesarias para generar, visualizar y analizar comunidades dentro de un grafo.
 
 Al obtener las comunidades vinculadas, estas serán guardadas en la carpeta de results y, además, se han obtenido los tamaños de los clusters y han sido clasificados por comunidad/modularidad para así obtener los 6 mejores.
 
