--- a/report/report.tex
+++ b/report/report.tex
@@ -12,6 +12,7 @@
 %\RequirePackage[numbers]{natbib}
 %\RequirePackage{hyperref}
 \usepackage[utf8]{inputenc} %unicode support
+\usepackage{listings}
 %\usepackage[applemac]{inputenc} %applemac support if unicode package fails
 %\usepackage[latin1]{inputenc} %UNIX support if unicode package fails
 
