--- a/report/tex_files/material_methods.tex
+++ b/report/tex_files/material_methods.tex
@@ -16,6 +16,8 @@ Después de tener las librerías necesarias y saber la funcionalidad de cada una
 Seguidamente, se filtrarán las entradas utilizando el paquete "dplyr" en las que la columna Entry.Name contenga en su nombre "HUMAN" ya que estos son los datos que interesan en esta práctica.
 
 El código que ha sido implementado para la carga de librerías y datos es el siguiente:
+
+
 \begin{lstlisting}
 	library(igraph)
 	library(dplyr)
@@ -41,7 +43,7 @@ Seguidamente, se creará la primera capa de la red y se guardará el resultado d
 \subsection{Grado de Distribución}
 El grado de un vértice en una red es el número de conexiones asociadas a un vértice. Haciendo un recuento en una red del número de nodos por cada grado se tiene el grado de distribución. Este es entendido igualmente como la distribución de probabilidad de un grado en la red.
 
-En esta práctica, se ha obtenido el grado de la red mediante el  método "degree" y después se ha obtenido el grado de distribución mediante el método "degree_distribution".
+En esta práctica, se ha obtenido el grado de la red mediante el  método "degree" y después se ha obtenido el grado de distribución mediante el método "degree\_distribution".
 
 Seguidamente se ha obtenido el coeficiente de agrupamiento mediante el método "transitivity" y por último, ha sido calculada la distancia euclídea. 
 
