--- a/report/report.tex
+++ b/report/report.tex
@@ -12,7 +12,28 @@
 %\RequirePackage[numbers]{natbib}
 %\RequirePackage{hyperref}
 \usepackage[utf8]{inputenc} %unicode support
+\usepackage{float}
 \usepackage{listings}
+\lstset{ %
+	language=R,                     % the language of the code
+	basicstyle=\footnotesize,       % the size of the fonts that are used for the code
+	numbers=left,                   % where to put the line-numbers
+	numberstyle=\tiny\color{gray},  % the style that is used for the line-numbers
+	stepnumber=1,                   % the step between two line-numbers. If it's 1, each line
+	% will be numbered
+	numbersep=5pt,                  % how far the line-numbers are from the code
+	backgroundcolor=\color{white},  % choose the background color. You must add \usepackage{color}
+	showspaces=false,               % show spaces adding particular underscores
+	showstringspaces=false,         % underline spaces within strings
+	showtabs=false,                 % show tabs within strings adding particular underscores
+	frame=single,                   % adds a frame around the code
+	rulecolor=\color{black},        % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. commens (green here))
+	tabsize=2,                      % sets default tabsize to 2 spaces
+	captionpos=b,                   % sets the caption-position to bottom
+	breaklines=true,                % sets automatic line breaking
+	breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
+	escapeinside={\%*}{*)},         % if you want to add a comment within your code
+} 
 %\usepackage[applemac]{inputenc} %applemac support if unicode package fails
 %\usepackage[latin1]{inputenc} %UNIX support if unicode package fails
 
@@ -30,13 +51,7 @@
 		\begin{fmbox}
 			\dochead{Research}
 						
-			
 			\title{Red de los targets de SARS-CoV2}
-			
-			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			%% AUTORES. METER UNA ENTRADA AUTHOR        %%
-			%% POR PERSONA                              %%
-			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			
 			\author[
 			  addressref={aff1},
@@ -49,19 +64,16 @@
 			  email={paulandujar@uma.es}
 			]{\inits{P.A.Z}\fnm{Paula} \snm{Andújar Zambrano}}
 			\author[
-			addressref={aff1},
-			corref={aff1},
-			email={0619884107@uma.es}
+			  addressref={aff1},
+			  corref={aff1},
+			  email={0619884107@uma.es}
 			]{\inits{R.G.M}\fnm{Rosario} \snm{García Morales}}
 			\author[
-			addressref={aff1},
-			corref={aff1},
-			email={delcastillosoledad@uma.es}
+			  addressref={aff1},
+			  corref={aff1},
+			  email={delcastillosoledad@uma.es}
 			]{\inits{S.dC.C}\fnm{Soledad} \snm{del Castillo Carrera}}
 			
-			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			%% AFILIACION. NO TOCAR                     %%
-			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			
 			\address[id=aff1]{%                           % unique id
 			  \ordiv{ETSI Informática},             % department, if any
@@ -70,7 +82,8 @@
 			  \cny{España}                                    % country
 			}
 		
-		\end{fmbox}% comment this for two column layout
+		\end{fmbox}
+
 		
 		\begin{abstractbox}
 		
