--- a/report/tex_files/resultados.tex
+++ b/report/tex_files/resultados.tex
@@ -2,112 +2,111 @@
 
 \subsection{Red de interacciones y robustez}
 
-La siguiente imagen muestra la red de interaciones del ser humano con las proteínas del SARS-CoV. Como podemos ver el SARS-CoV interacciona con 89 proteínas humanas, produciendo un total de 475 interacciones. 
-\begin{figure}
+En la imagen Figure~\ref{stringhits} se muestra la red de interacciones del ser humano con las proteínas del SARS-CoV. Como podemos ver el SARS-CoV interacciona con 89 proteínas humanas, produciendo un total de 475 interacciones. 
+
+\begin{figure}[h]
 	\centering
-	
-	\includegraphics[width=70mm,scale=1.2]{figures/string_hits.png}
-	
-	\caption{\textit{Red de interacciones del SARS-CoV con las proteínas humanas}}
-	
+		\includegraphics[width=70mm,scale=1.2]{figures/string_hits.png}
+		\caption{\textit{Red de interacciones del SARS-CoV con las proteínas humanas}}
+		\label{stringhits}
 \end{figure}
 
-Tras eliminar los nodos que no están conectados, hemos obtenido la red real de interacciones que podemos ver a continuación. Sin embargo hay demasiadas conexiones como para poder distinguir los nodos. Es por ello que realizaremos los pasos siguientes de clustering, para así poder extraer la información relevante de la red. 
-\begin{figure}
+Tras eliminar los nodos que no están conectados, hemos obtenido la red real de interacciones que podemos ver a continuación. Sin embargo hay demasiadas conexiones como para poder distinguir los nodos. Es por ello que realizaremos los pasos siguientes de clustering, para así poder extraer la información relevante de la red. Podemos observar la red de interacciones en la figura Figure~\ref{hitsnetwork}.
+
+\begin{figure}[h]
 	\centering
-	
-	\includegraphics[width=70mm,scale=1.2]{figures/hits.network_graph.png}
-	
-	\caption{\textit{Red de interacciones del SARS-CoV con las proteínas humanas tras un proceso de filtrado}}
-	
-\end{figure}
-
-
-Antes de empezar con ese proceso vamos a estudiar diferentes aspectos de nuestra red. En primer lugar si observamos la imagen, vemos que el la distribución de grado sigue la ley de potencias, por lo tanto nuestra red sigue un modelo de free-scale, lo cual era predecible al estar tratando con una red real. 
-
-Podemos  ver una gran cantidad de hubs. 
-\begin{figure}
-	\centering
-	
-	\includegraphics[width=70mm,scale=1.2]{figures/degree_distribution.png}
-	
-	\caption{\textit{Distribución de grado}}
-	
-\end{figure}
-
-El coeficiente medio de agrupamiento es de 0.605, lo cual es bastante alto. Además se puede observar la característica propia de las redes reales la cual afirma que conforme el grado de los nodos aumenta, el coeficiente de agrupamiento disminuye. 
-
-\begin{figure}
-	\centering
-	
-	\includegraphics[width=70mm,scale=1.2]{figures/coeficiente_agrupamiento.png}
-	
-	\caption{\textit{Coeficiente de Agrupamiento}}
-	
+		\includegraphics[width=70mm,scale=1.2]{figures/hits.network_graph.png}
+		\caption{\textit{Red de interacciones del SARS-CoV con las proteínas humanas tras un proceso de filtrado}}
+		\label{hitsnetwork}
 \end{figure}
 
 
-La distancia media entre nodos es de 2.03, una medida muy pequeña que puede significar que los nodos tienen un alto índice de conexiones. Esta medida es la que le da la propiedad de mundo pequeño, es decir, la distancia entre nodos elegidos al azar en una red es muy pequeña. 
-\begin{figure}
+Antes de empezar con ese proceso vamos a estudiar diferentes aspectos de nuestra red. En primer lugar si observamos la imagen Figure~\ref{degree}, vemos que el la distribución de grado sigue la ley de potencias, por lo tanto nuestra red sigue un modelo de free-scale, lo cual era predecible al estar tratando con una red real. 
+
+Podemos  ver una gran cantidad de hubs.
+
+\begin{figure}[h]
 	\centering
-	
-	\includegraphics[width=70mm,scale=1.2]{figures/distancia.png}
-	
-	\caption{\textit{Distancia entre nodos}}
-	
+		\includegraphics[width=70mm,scale=1.2]{figures/degree_distribution.png}
+		\caption{\textit{Distribución de grado}}
+	    \label{degree}
 \end{figure}
 
-Por último vamos a estudiar la robustez de nuestra red. Para poder estudiar cual es la capacidad de nuestra red de mantener sus funciones frente a la presencia de "ataques" y ver cuán de adaptable es, usamos la robustez. Podemos observar que para ataques aleatorios es bastante robusta, mientras que para ataques dirigidos es más débil. Pues a que tenemos una red real, estos resultados resultan obvios, ya que es más fácil destruir una red si atacas a puntos estratégicos como son los hubs, dónde el tamaño de la componente conexa se reduce drásticamente cuando eliminamos una pequeña fracción de los nodos (hubs). 
+El coeficiente medio de agrupamiento es de 0.605, lo cual es bastante alto. Además se puede observar la característica propia de las redes reales la cual afirma que conforme el grado de los nodos aumenta, el coeficiente de agrupamiento disminuye. La gráfica del coeficiente de agrupamiento esta en la Figure~\ref{coefclust}.
 
-\begin{figure}
+\begin{figure}[h]
+	\centering
+		\includegraphics[width=70mm,scale=1.2]{figures/coeficiente_agrupamiento.png}
+		\caption{\textit{Coeficiente de Agrupamiento}}
+		\label{coefclust}
+\end{figure}
+
+La distancia media entre nodos es de 2.03, una medida muy pequeña que puede significar que los nodos tienen un alto índice de conexiones. Esta medida es la que le da la propiedad de mundo pequeño, es decir, la distancia entre nodos elegidos al azar en una red es muy pequeña. Esto se puede observar de forma visual en la Figure~\ref{distance}.
+
+\begin{figure}[h]
+	\centering
+		\includegraphics[width=70mm,scale=1.2]{figures/distancia.png}
+		\caption{\textit{Distancia entre nodos}}
+		\label{distance}	
+\end{figure}
+
+Por último vamos a estudiar la robustez de nuestra red. Para poder estudiar cual es la capacidad de nuestra red de mantener sus funciones frente a la presencia de "ataques" y ver cuán de adaptable es, usamos la robustez. Podemos observar en la Figure~\ref{ataques} que para ataques aleatorios es bastante robusta, mientras que para ataques dirigidos es más débil. Pues a que tenemos una red real, estos resultados resultan obvios, ya que es más fácil destruir una red si atacas a puntos estratégicos como son los hubs, dónde el tamaño de la componente conexa se reduce drásticamente cuando eliminamos una pequeña fracción de los nodos (hubs). 
+
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/sequential_attacks.png}
 	\caption{\textit{Robustez frente a ataques dirigidos y aleatorios}}
+	\label{ataques}
 \end{figure}
 
 \subsection{Linked Communities}
 En esta sección se explicarán los resultados obtenidos aplicar los métodos de comunidades enlazadas a nuestra red, para los cuales hemos usado el paquete linkcomm.
 
-Para ello, primero hemos obtenido estas comunidades aplicando un 'single clustering'. Se ha guardado una imagen del resumen de estas comunidades para un resultado más visual.
+Para ello, primero hemos obtenido estas comunidades aplicando un 'single clustering'. Se ha guardado una imagen Figure~\ref{comunidades} del resumen de estas comunidades para un resultado más visual.
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/covid_lc_summary.png}
 	\caption{\textit{Esquema de las comunidades obtenidas}}
+	\label{comunidades}
 \end{figure}
 
 Podemos observar que este método ha definido 165 comunidades diferentes, la mayor de estas tiene 70 nodos lo cual podemos deducir que hay varias comunidades que comparten nodos.
 
-Para poder analizar un poco las comunidades las hemos filtrado por tamaño y modularidad. Las gráficas generadas para este propósito las mostramos a continuación.
+Para poder analizar un poco las comunidades, las hemos filtrado por tamaño y modularidad. Las gráficas generadas para este propósito son respectivamente Figure~\ref{comTamaño} y Figure~\ref{comModularidad}.
 
-\begin{figure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/lc_larger_clusters.png}
 	\caption{\textit{Comunidades por tamaño}}
+	\label{comTamaño}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/clusters_modularity.png}
 	\caption{\textit{Comunidades por modularidad}}
+	\label{comModularidad}
 \end{figure}
 
 De estas gráficas hemos podido extraer la comunidad 112 siendo esta la más grande y las comunidades 78 y 22 con una mayor modularidad. Estas comunidades serán utilizadas posteriormente para un análisis funcional.
 
-Para una mejor visualización de los resultados, se ha cambiado el diseño de la gráfica al de Fruchterman Reingold, mostrando solo nodos que pertenezcan a 10 o más comunidades.
+Para una mejor visualización de los resultados, se ha cambiado el diseño de la gráfica al de Fruchterman Reingold (se puede observar en la Figure~\ref{FRg}), mostrando solo nodos que pertenezcan a 10 o más comunidades.
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/hits.network_layout_fruchterman.reingold_shownodesin_10.png}
 	\caption{\textit{Fruchterman Reingold graph}}
+	\label{FRg}
 \end{figure}
 
-Por otra parte, se han obtenido las comunidades anidadas y se han filtrado para que se muestren las que son independientes de las demás.
+Por otra parte, se han obtenido las comunidades anidadas y se han filtrado para que se muestren las que son independientes de las demás. Estas se observar en la Figure~\ref{anidadas}.
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/nested_comm.png}
 	\caption{\textit{Comunidades anidadas}}
+	\label{anidadas}
 \end{figure}
 
 \subsection{Enriquecimiento funcional}
@@ -119,15 +118,16 @@ Se ha guardado la información del enriquecimiento en archivos de tipo csv, y se
 
 \paragraph{Enriquecimiento con GO}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster112_GO.png}
 	\caption{\textit{Funciones biológicas clúster 112 con GO}}
+	\label{112go}
 \end{figure}
 
 Se puede observar que las funciones biológicas visibles están relacionadas con la defensa del organismo, por lo que se puede deducir que son proteínas que forman parte del sistema inmunológico de nuestro organismo. No obstante, en la imagen solo aparecen algunas funciones biológicas. Si se sigue observando el archivo generado nos encontramos con:
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster112_GO_2.png}
 	\caption{\textit{Funciones biológicas clúster 112 con GO}}
@@ -137,7 +137,7 @@ Aquí observamos que otras tantas funciones biológicas están asociadas con la 
 
 \paragraph{Enriquecimiento con KEGG}
 
-\begin{figure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster112_KEGG.png}
 	\caption{\textit{Funciones biológicas clúster 112 con KEGG}}
@@ -150,7 +150,7 @@ Además de esto, se observan funciones biológicas relacionadas con vías bioló
 
 \paragraph{Enriquecimiento con GO}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster78_GO.png}
 	\caption{\textit{Funciones biológicas clúster 78 con GO}}
@@ -160,7 +160,7 @@ En este resultado, GO no ha encontrado funciones biológicas asociadas al clúst
 
 \paragraph{Enriquecimiento con KEGG}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster78_KEGG.png}
 	\caption{\textit{Funciones biológicas clúster 78 con KEGG}}
@@ -172,7 +172,7 @@ En este caso, KEGG ha encontrado dos funciones biológicas asociadas al clúster
 
 \paragraph{Enriquecimiento con GO}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster22_GO.png}
 	\caption{\textit{Funciones biológicas clúster 22 con GO}}
@@ -182,7 +182,7 @@ En este caso, se puede observar que las principales funciones biológicas de las
 
 \paragraph{Enriquecimiento con KEGG}
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/cluster22_KEGG.png}
 	\caption{\textit{Funciones biológicas clúster 22 con KEGG}}
