--- a/report/tex_files/resultados.tex
+++ b/report/tex_files/resultados.tex
@@ -75,14 +75,14 @@ Podemos observar que este método ha definido 165 comunidades diferentes, la may
 
 Para poder analizar un poco las comunidades, las hemos filtrado por tamaño y modularidad. Las gráficas generadas para este propósito son respectivamente Figure~\ref{comTamaño} y Figure~\ref{comModularidad}.
 
-\begin{figure}[H]
+\begin{figure}h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/lc_larger_clusters.png}
 	\caption{\textit{Comunidades por tamaño}}
 	\label{comTamaño}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=70mm,scale=1.2]{figures/clusters_modularity.png}
 	\caption{\textit{Comunidades por modularidad}}
