--- a/report/report.tex
+++ b/report/report.tex
@@ -132,9 +132,7 @@
 			https://github.com/Paulandujar/project\_template
 		
 		\section*{Contribución de los autores}
-			Usando las iniciales que habéis definido al comienzo del documento, debeis indicar la contribución al proyecto en el estilo:
-			J.E : Encargado del análisis de coexpresión con R, escritura de resultados; J.R.S : modelado de red con python y automatizado del código, escritura de métodos; ...
-			OJO: que sea realista con los registros que hay en vuestros repositorios de github. 
+			I.R.G: Encargada del análisis de la red (distancia entre nodos, distribución de grado y coeficiente de agrupamiento), cálculo de la robustez, escritura del launch.sh y escritura de los resultados de estos cálculos en el report; P.A.Z: Encargada del cálculo linked communities, posterior análisis de esos resultados en el report y escritora del abstract; R.G.M: Encargada de las funciones de Robustez y escritura del apartado Materiales y Métodos; S.dC.C: Encargada del enriquecimiento funcional, análisis de esos resultados en el report y escritura del setup.sh 
 		
 		
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
