--- a/report/report.tex
+++ b/report/report.tex
@@ -9,6 +9,7 @@
 %%% Load packages
 \usepackage{amsthm,amsmath}
 \usepackage{graphicx}
+\usepackage{csvsimple}
 %\RequirePackage[numbers]{natbib}
 %\RequirePackage{hyperref}
 \usepackage[utf8]{inputenc} %unicode support
