cambios en latex

--- a/report/tex_files/resultados.tex
+++ b/report/tex_files/resultados.tex
@@ -118,83 +118,29 @@ Se ha guardado la información del enriquecimiento en archivos de tipo csv, y se
 
 \paragraph{Enriquecimiento con GO}
 
-En la siguiente Figure~\ref{112go} se puede observar que las funciones biológicas visibles están relacionadas con la defensa del organismo, por lo que se puede deducir que son proteínas que forman parte del sistema inmunológico de nuestro organismo. No obstante, en la imagen solo aparecen algunas funciones biológicas. Si se sigue observando el archivo generado nos encontramos con los resultados localizados en la Figure~\ref{112-2go}:
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster112_GO.png}
-	\caption{\textit{Funciones biológicas clúster 112 con GO}}
-	\label{112go}
-\end{figure}
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster112_GO_2.png}
-	\caption{\textit{Funciones biológicas clúster 112 con GO}}
-	\label{112-2go}
-\end{figure}
-
-Aquí observamos que otras tantas funciones biológicas están asociadas con la regulación de diversos procesos biológicos.
+Entre las funciones biológicas obtenidas con el enriquecimiento con GO, se puede observar que algunas de ellas están relacionadas con la defensa del organismo, por lo que se puede deducir que son proteínas que forman parte del sistema inmunológico de nuestro organismo. Otras tantas funciones biológicas están asociadas con la regulación de diversos procesos biológicos.
 
 \paragraph{Enriquecimiento con KEGG}
 
-En la Figure~\ref{112kegg} se puede observar que las funciones biológicas están relacionadas con enfermedades/infecciones (malaria, hepatitis B, tuberculosis) por lo que se podríamos deducir que dichas proteínas forman parte de la respuesta inmunitaria del organismo ante dichas enfermedades o que las provocan.
-Además de esto, se observan funciones biológicas relacionadas con vías biológicas del organismo, como son la vía de señalización de quimioquinas, la de detección de ADN ctosólico...
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster112_KEGG.png}
-	\caption{\textit{Funciones biológicas clúster 112 con KEGG}}
-	\label{112kegg}
-\end{figure}
+Las funciones biológicas en el enriquecimiento con KEGG están relacionadas con enfermedades/infecciones (malaria, hepatitis B, tuberculosis) por lo que se podríamos deducir que dichas proteínas forman parte de la respuesta inmunitaria del organismo ante dichas enfermedades o que las provocan.
+Además de esto, se observan funciones biológicas relacionadas con vías biológicas del organismo, como son la vía de señalización de quimioquinas, la de detección de ADN citosólico...
 
 \subsubsection{Clúster 78}
 
 \paragraph{Enriquecimiento con GO}
 
-En la Figure~\ref{78go} , GO no ha encontrado funciones biológicas asociadas al clúster elegido.
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster78_GO.png}
-	\caption{\textit{Funciones biológicas clúster 78 con GO}}
-	\label{78go}
-\end{figure}
+GO no ha encontrado funciones biológicas asociadas al clúster elegido.
 
 \paragraph{Enriquecimiento con KEGG}
 
-En este caso, en la Figure~\ref{78kegg} , KEGG ha encontrado dos funciones biológicas asociadas al clúster: cáncer de tiroides y vías en el cáncer. Es por tanto que deducimos que las proteínas que forman parte de este clúster se ocupan de las vías principales del cáncer de tiroides, ya sea para detectarlo o provocarlo. 
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster78_KEGG.png}
-	\caption{\textit{Funciones biológicas clúster 78 con KEGG}}
-	\label{78kegg}
-\end{figure}
+En este caso, KEGG ha encontrado dos funciones biológicas asociadas al clúster: cáncer de tiroides y vías en el cáncer. Es por tanto que deducimos que las proteínas que forman parte de este clúster se ocupan de las vías principales del cáncer de tiroides, ya sea para detectarlo o provocarlo. 
 
 \subsubsection{Clúster 22}
 
 \paragraph{Enriquecimiento con GO}
 
-En este caso, en la Figure~\ref{22go} , se puede observar que las principales funciones biológicas de las proteínas pertenecientes a este clúster son de regulación, transporte y recepción, por lo que desempeñan funciones muy importantes en las rutas metabólicas del organismo. 
-
-\csvautotabular{figures/funcionesbiologicas_GO_cluster22.csv}
-	
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster22_GO.png}
-	\caption{\textit{Funciones biológicas clúster 22 con GO}}
-	\label{22go}
-\end{figure}
+En este caso se puede observar que las principales funciones biológicas de las proteínas pertenecientes a este clúster son de regulación, transporte y recepción, por lo que desempeñan funciones muy importantes en las rutas metabólicas del organismo. 
 
 \paragraph{Enriquecimiento con KEGG}
 
-En la Figure~\ref{22kegg} , las funciones biológicas obtenidas por KEGG son más concretas: reabsorción de calcio regulada por factores endocrinos, ciclo de vesículas sinápticas, endocitosis, lisosoma, enfermedad de Huntington, invasión bacteriana de las células epiteliales y vía de señalización de la fosfolipasa D. Esta última está relacionada con la traducción de señales. Otras están relacionadas con enfermedades y sus causas.
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=70mm,scale=1.2]{figures/cluster22_KEGG.png}
-	\caption{\textit{Funciones biológicas clúster 22 con KEGG}}
-	\label{22kegg}
-\end{figure}
+Las funciones biológicas obtenidas por KEGG son más concretas: reabsorción de calcio regulada por factores endocrinos, ciclo de vesículas sinápticas, endocitosis, lisosoma, enfermedad de Huntington, invasión bacteriana de las células epiteliales y vía de señalización de la fosfolipasa D. Esta última está relacionada con la traducción de señales. Otras están relacionadas con enfermedades y sus causas.
