--- a/report/tex_files/resultados.tex
+++ b/report/tex_files/resultados.tex
@@ -144,3 +144,26 @@ En este caso se puede observar que las principales funciones biológicas de las 
 \paragraph{Enriquecimiento con KEGG}
 
 Las funciones biológicas obtenidas por KEGG son más concretas: reabsorción de calcio regulada por factores endocrinos, ciclo de vesículas sinápticas, endocitosis, lisosoma, enfermedad de Huntington, invasión bacteriana de las células epiteliales y vía de señalización de la fosfolipasa D. Esta última está relacionada con la traducción de señales. Otras están relacionadas con enfermedades y sus causas.
+
+Tras realizar el análisis funcional usando el paquete clusuterProfiler, hemos generado una gráfica para cada clúster que nos compara el p-value de los resultados frente al qscore de estos. Con esto podemos extraer las funciones más frecuentes de cada comunidad y así hacernos una idea de las características comunes de nuestros clústeres. Las funciones del clúster 78 podemos observarlas en la imagen Figure~\ref{78funciones}, las del clúster 22 se encuentran en la imagen Figure~\ref{22funciones} y las del 112 en la imagen Figure~\ref{112funciones}.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=70mm,scale=1.2]{figures/funcionesGO78.png}
+	\caption{\textit{Funciones principales del clúster 78}}
+	\label{78funciones}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=70mm,scale=1.2]{figures/funcionesGO22.png}
+	\caption{\textit{Funciones principales del clúster 22}}
+	\label{22funciones}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=70mm,scale=1.2]{figures/funcionesGO112.png}
+	\caption{\textit{Funciones principales del clúster 112}}
+	\label{112funciones}
+\end{figure}
